gcc-mingw-w64 (20) UNRELEASED; urgency=medium

  * Drop the old Recommends from gcc-mingw-w64 to g++-mingw-w64,
    gfortran-mingw-w64 and gnat-mingw-w64 (thanks to Adam Borowski for
    pointing out that they were still there; closes: #875263).
  * Build using GCC 7 (Closes: #881426).
  * Switch priority from “extra” to “optional”.

 -- Stephen Kitt <skitt@debian.org>  Sun, 11 Jun 2017 18:56:35 +0200

gcc-mingw-w64 (19.3) unstable; urgency=medium

  * Copy gcov-dump.texi (Closes: #860607).

 -- Stephen Kitt <skitt@debian.org>  Wed, 19 Apr 2017 11:36:36 +0200

gcc-mingw-w64 (19.2) unstable; urgency=medium

  * Enable libatomic, using Richard Purdie's patch from
    https://gcc.gnu.org/bugzilla/show_bug.cgi?id=55930 (Closes: #844617).
  * Add more spelling fixes.
  * Disable the bootstrap package for now, the bootstrap sequence is
    broken (#838879) and having a bootstrap package entails a trip through
    NEW for every upload.

 -- Stephen Kitt <skitt@debian.org>  Sun, 20 Nov 2016 00:11:26 +0100

gcc-mingw-w64 (19.1) unstable; urgency=medium

  * Upload to unstable.
  * Disable PIE, it causes issues with pre-compiled headers.
  * Disable package mangling in Launchpad (thanks to Dimitri John Ledkov
    for the Ubuntu patch).
  * Build-depend on libisl-dev instead of libcloog-isl-dev (Closes:
    #833579).
  * Use a token for the GCC version in debian/control.

 -- Stephen Kitt <skitt@debian.org>  Sat, 20 Aug 2016 17:24:54 +0200

gcc-mingw-w64 (19) experimental; urgency=medium

  * Build with gcc-6.
  * Remove obsolete hardening overrides.

 -- Stephen Kitt <skitt@debian.org>  Tue, 14 Jun 2016 22:37:44 +0200

gcc-mingw-w64 (18) unstable; urgency=medium

  * Use build-profiles for bootstrapping.
  * Fix the spelling mistakes flagged by Lintian.
  * Clean up debian/control with cme.
  * Standards-Version 3.9.8, no further change required.
  * Switch to debhelper compatibility level 9.
  * Enable hardening for host binaries.