@@ -5,6 +5,7 @@ gcc-mingw-w64 (20) UNRELEASED; urgency=medium
     pointing out that they were still there; closes: #875263).
   * Build using GCC 7 (Closes: #881426).
   * Switch priority from “extra” to “optional”.
+  * Use pkg-info.mk instead of dpkg-parsechangelog.
 
  -- Stephen Kitt <skitt@debian.org>  Sun, 11 Jun 2017 18:56:35 +0200
 
